--- a/style.css
+++ b/style.css
@@ -344,69 +344,37 @@ nav.show div.icon-close {
 }
 
 /*====  SERVICES ============================ */
-/* .cards.grid {
+.pagination-container {
   display: flex;
+  align-items: center;
   flex-direction: column;
-  gap: 3rem;
-  align-items: stretch;
+  gap: 1.5rem;
 }
-
-.card {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  width: 100%;
-}
-
-.card .title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-width: 4.5rem;
-  padding: 1.5rem;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
-  border-bottom: 0.25rem solid var(--base-color);
-  border-radius: 0.25rem;
-  text-align: center;
-  font-weight: bold;
-}
-
-.card .title h3 {
-  font-size: 1.5rem;
-  margin: 0;
-}
-
-.card .content-text {
-  flex-grow: 1;
-  text-align: left;
-  white-space: pre;
-} */
 
 .cards-wrapper {
   width: 100%;
-  min-height: 300px; /* Para evitar saltos de layout */
+  min-height: 300px;
   display: flex;
   justify-content: center;
-  align-items: flex-start;
-  position: relative;
+  align-items: center;
 }
 
 .cards.grid {
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  align-items: stretch;
+  align-items: center;
   width: 100%;
+  max-width: max-content;
 }
 
-/* Esconder os grids não ativos */
 .cards.grid.hidden {
   display: none;
 }
 
 .card {
   display: flex;
-  align-items: center;
+  align-items: stretch;
   gap: 1rem;
   width: 100%;
 }
@@ -415,24 +383,29 @@ nav.show div.icon-close {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 4.5rem;
   padding: 1.5rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-bottom: 0.25rem solid var(--base-color);
   border-radius: 0.25rem;
   text-align: center;
   font-weight: bold;
+  flex-shrink: 0;
+  width: 4.5rem;
 }
 
 .card .title h3 {
   font-size: 1.5rem;
   margin: 0;
+  white-space: nowrap;
 }
 
 .card .content-text {
   flex-grow: 1;
   text-align: left;
-  white-space: pre;
+  white-space: normal;
+  word-break: break-word;
+  display: flex;
+  align-items: center;
 }
 
 /* Paginação */
