--- a/style.css
+++ b/style.css
@@ -373,13 +373,12 @@ nav.show div.icon-close {
 }
 
 .author {
-  font-family: "Dancing Script", cursive; /* Fonte manuscrita bonita */
-  font-size: 1.2rem; /* Tamanho adequado para assinatura */
+  font-family: "Dancing Script", cursive;
+  font-size: 1.2rem;
   font-style: italic;
-  font-weight: bold;
-  color: #555; /* Tom levemente escuro para elegância */
-  text-align: right; /* Alinha à direita, como uma assinatura */
-  margin-top: 0.5rem; /* Espaço superior */
+  color: #555;
+  text-align: right;
+  margin-top: 0.5rem;
 }
 
 .card {
