--- a/style.css
+++ b/style.css
@@ -423,33 +423,54 @@ nav.show div.icon-close {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+  font-variant-numeric: tabular-nums;
 }
 
-.pagination a {
-  padding: 0.5rem 1rem;
+.pagination button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  padding:0;
   background-color: var(--base-color);
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 0.25rem;
   font-size: 1.2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 2.5rem;
   height: 2.5rem;
   user-select: none;
 }
 
-.pagination a:disabled {
-  background-color: gray;
+.pagination button:disabled {
   cursor: not-allowed;
+  opacity: 0.6;
+}
+
+.pagination a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;
+  color: inherit;
+  line-height: 1;
+}
+
+.pagination button a::before {
+  vertical-align: middle;
+}
+
+.pagination button:disabled a {
+  pointer-events: none;
+  color: inherit;
   opacity: 0.6;
 }
 
 .page-indicator {
   font-weight: bold;
-  font-variant-numeric: tabular-nums;
 }
 
 /*====  TESTIMONIALS ============================ */
