--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ img {
   /* fonts */
   --title-font-size: 1.875rem;
   --subtitle-font-size: 1rem;
+  --asterisc-font-size: 0.6rem;
 
   --title-font: 'Poppins', sans-serif;
   --body-font: 'DM Sans', sans-serif;
@@ -114,6 +115,10 @@ body {
 
 .section .subtitle {
   font-size: var(--subtitle-font-size);
+}
+
+.section .asterisc {
+  font-size: var(--asterisc-font-size);
 }
 
 .section header {
@@ -474,11 +479,28 @@ nav.show div.icon-close {
 }
 
 /*====  TESTIMONIALS ============================ */
+.testimonial .button i,
+.testimonial ul li i {
+  font-size: 1.5rem;
+  margin-right: 0.625rem;
+}
+
+
+.testimonial {
+  display: flex;
+  width: 100%;
+  align-item: center;
+  justify-content: center;
+}
+
 #testimonials {
   background: white;
 }
 
 #testimonials .container {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   margin-left: 0;
   margin-right: 0;
 }
@@ -527,12 +549,12 @@ nav.show div.icon-close {
 #testimonials .box {
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 /* swiper */
 .swiper-slide {
   height: auto;
-  padding: 4rem 1rem;
 }
 
 .swiper-pagination-bullet {
@@ -758,6 +780,7 @@ footer .social a:hover {
   :root {
     --title-font-size: 2.25rem;
     --subtitle-font-size: 1.125rem;
+    --asterisc-font-size: 0.725rem;
   }
 }
 /* medium devices: 767 > */
