--- a/style.css
+++ b/style.css
@@ -263,19 +263,19 @@ nav.show div.icon-close {
 }
 
 /*====  HOME ============================ */
-#home {
+#inicio {
   overflow: hidden;
 }
 
-#home .container {
+#inicio .container {
   margin: 0;
 }
 
-#home .image {
+#inicio .image {
   position: relative;
 }
 
-#home .image::before {
+#inicio .image::before {
   content: '';
   height: 100%;
   width: 100%;
@@ -286,44 +286,44 @@ nav.show div.icon-close {
   z-index: 0;
 }
 
-#home .image img {
+#inicio .image img {
   position: relative;
   right: 2.93rem;
 }
 
-#home .image img,
-#home .image::before {
+#inicio .image img,
+#inicio .image::before {
   border-radius: 0.25rem;
 }
 
-#home .text {
+#inicio .text {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   text-align: center;
 }
 
-#home .text h1 {
+#inicio .text h1 {
   margin-bottom: 1rem;
 }
 
-#home .text p {
+#inicio .text p {
   margin-bottom: 2rem;
 }
 
 /*====  ABOUT ============================ */
-#about {
+#sobre {
   background: white;
 }
 
-#about .container {
+#sobre .container {
   margin: 0;
 }
 
-#about .image {
+#sobre .image {
   position: relative;
 }
 
-#about .image::before {
+#sobre .image::before {
   content: '';
   height: 100%;
   width: 100%;
@@ -334,16 +334,16 @@ nav.show div.icon-close {
   z-index: 0;
 }
 
-#about .image img {
+#sobre .image img {
   position: relative;
 }
 
-#about .image img,
-#about .image::before {
+#sobre .image img,
+#sobre .image::before {
   border-radius: 0.25rem;
 }
 
-#about .text {
+#sobre .text {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
 }
@@ -493,11 +493,11 @@ nav.show div.icon-close {
   justify-content: center;
 }
 
-#testimonials {
+#enviar {
   background: white;
 }
 
-#testimonials .container {
+#enviar .container {
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -505,26 +505,26 @@ nav.show div.icon-close {
   margin-right: 0;
 }
 
-#testimonials header {
+#enviar header {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
   margin-bottom: 0;
 }
 
-#testimonials blockquote {
+#enviar blockquote {
   padding: 2rem;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-radius: 0.25rem;
 }
 
-#testimonials blockquote p {
+#enviar blockquote p {
   position: relative;
   text-indent: 1.875rem;
   margin-bottom: 1.5rem;
   color: var(--title-color);
 }
 
-#testimonials blockquote p span {
+#enviar blockquote p span {
   font: 700 2.5rem serif;
   position: absolute;
   top: -0.375rem;
@@ -532,13 +532,13 @@ nav.show div.icon-close {
   color: var(--base-color);
 }
 
-#testimonials cite {
+#enviar cite {
   display: flex;
   align-items: center;
   font-style: normal;
 }
 
-#testimonials cite img {
+#enviar cite img {
   width: 2rem;
   height: 2rem;
   object-fit: cover;
@@ -546,7 +546,7 @@ nav.show div.icon-close {
   margin-right: 0.5rem;
 }
 
-#testimonials .box {
+#enviar .box {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -675,7 +675,7 @@ footer .social a:hover {
   }
 
   .section header,
-  #testimonials header {
+  #enviar header {
     max-width: 32rem;
     text-align: center;
     margin-left: auto;
@@ -718,24 +718,24 @@ footer .social a:hover {
   }
 
   /* home */
-  #home .container {
+  #inicio .container {
     grid-auto-flow: column;
     justify-content: space-between;
     margin: 0 auto;
   }
 
-  #home .image {
+  #inicio .image {
     order: 1;
   }
 
-  #home .text {
+  #inicio .text {
     order: 0;
     max-width: 24rem;
     text-align: left;
   }
 
   /* about */
-  #about .container {
+  #sobre .container {
     margin: 0 auto;
     grid-auto-flow: column;
   }
@@ -744,7 +744,7 @@ footer .social a:hover {
 
 
   /* testimonials */
-  #testimonials .container {
+  #enviar .container {
     margin-left: auto;
     margin-right: auto;
   }
