--- a/style.css
+++ b/style.css
@@ -389,26 +389,27 @@ nav.show div.icon-close {
 .card {
   display: flex;
   align-items: stretch;
-  gap: 1rem;
+  gap: 0.2rem;
   width: 100%;
 }
 
 .card .title {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  /* justify-content: flex-end; */
   justify-content: center;
-  padding: 1.5rem;
+  padding: 1.5rem 0 1.5rem 0;
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
   border-bottom: 0.25rem solid var(--base-color);
   border-radius: 0.25rem;
   text-align: center;
   font-weight: bold;
   flex-shrink: 0;
-  width: 4.5rem;
+  width: 3.0rem;
 }
 
 .card .title h3 {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   margin: 0;
   white-space: nowrap;
 }
