--- a/style.css
+++ b/style.css
@@ -391,6 +391,7 @@ nav.show div.icon-close {
   align-items: stretch;
   gap: 0.2rem;
   width: 100%;
+  position: relative; 
 }
 
 .card .title {
@@ -399,13 +400,15 @@ nav.show div.icon-close {
   /* justify-content: flex-end; */
   justify-content: center;
   padding: 1.5rem 0 1.5rem 0;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  /* box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08); */
   border-bottom: 0.25rem solid var(--base-color);
   border-radius: 0.25rem;
-  text-align: center;
+  text-align: end;
   font-weight: bold;
   flex-shrink: 0;
   width: 3.0rem;
+  
+  position: relative;
 }
 
 .card .title h3 {
@@ -415,13 +418,16 @@ nav.show div.icon-close {
 }
 
 .card .content-text {
-  flex-grow: 1;
+  flex-grow: 1; /* Faz ocupar todo o espaço restante */
+  margin-left: -0.8rem; /* Ajusta para sobrepor um pouco o título */
+  margin-top: -0.3rem; /* Sobrepõe ligeiramente acima do título */
   text-align: left;
-  white-space: normal;
   word-break: break-word;
   display: flex;
   align-items: center;
+  padding: 0.2rem;
 }
+
 
 /* Paginação */
 .pagination {
